k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels: # lebels can be anything-- we can call compoent- "newstuff" and it will still work 
      component: server
  template: # is what our pods supposed to look like 
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: leojj/notey-server
          ports:
            - containerPort: 5000
          # env:
          #   - name: REDIS_HOST
          #     value: redis-cluster-ip-service
          #   - name: REDIS_PORT
          #     value: '6379'
          #   - name: PGUSER
          #     value: postgres
          #   - name: PGHOST
          #     value: postgres-cluster-ip-service
          #   - name: PGPORT
          #     value: '5432'
          #   - name: PGDATABASE
          #     value: postgres
          #   - name: PGPASSWORD #this val can be abything but our server is looking for pg password
          #     valueFrom:
          #       secretKeyRef:
          #         name: pgpassword
          #         key: PGPASSWORD # secerets store key value pairs
