k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-ip
spec:
  type: ClusterIP
  selector: # properly select our client deployment 
    component: web 
  ports:
    - port: 3000
      targetPort: 3000
# this cliuster ip is not allowing outside traffic yet
#to get a port 3000 inside of the container youre going to get a port 3000 on teh service
