k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-ip
spec: # always customizes how the service behaves 
  type: ClusterIP
  selector: # what set of pods is supposed to provide access to 
    component: server
  ports:
    - port: 5000 # this is the default port in our server 
      targetPort: 5000
