k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - notey-app.com
        - www.notey-app.com
      secretName: notey-app-com
  rules:
    - host: notey-app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-ip
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-ip
              servicePort: 5000
    - host: www.notey-app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-ip
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-ip
              servicePort: 5000
